--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
     </properties>
 
     <dependencies>
+
+        <!-- SELENIUM -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.27.0</version>
+        </dependency>
+
         <!-- REST -->
         <dependency>
             <groupId>io.rest-assured</groupId>
