--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,33 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <!-- JAVA COMPILER -->
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <allure.version>2.29.1</allure.version>
         <aspectj.version>1.9.22.1</aspectj.version>
+        <!-- REST -->
+        <httpclient.version>5.4-alpha1</httpclient.version>
+        <httpcore.version>4.4.16</httpcore.version>
+        <restassured.version>5.4.0</restassured.version>
+        <!-- SELENIUM -->
+        <selenium.version>4.28.1</selenium.version>
+        <!-- oauth connection library -->
+        <oauthsgignpost.version>2.1.1</oauthsgignpost.version>
+        <!-- UTILITIES -->
+        <testng.version>7.10.2</testng.version>
+        <assertj.version>3.26.3</assertj.version>
+        <lombok.version>1.18.36</lombok.version>
+        <!-- LOGGING -->
+        <slf4j.version>2.0.16</slf4j.version>
+        <!-- ALLURE -->
+        <allure.version>2.29.1</allure.version>
+        <!-- PARSING -->
+        <jackson.version>2.18.2</jackson.version>
+        <!-- DATABASE -->
+        <mysql-connector-j.version>9.1.0</mysql-connector-j.version>
+        <protobuf-java.version>4.28.2</protobuf-java.version>
+
     </properties>
 
     <dependencies>
@@ -22,53 +44,53 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.27.0</version>
+            <version>${selenium.version}</version>
         </dependency>
 
         <!-- REST -->
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>5.4.0</version>
+            <version>${restassured.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.httpcomponents.client5</groupId>
             <artifactId>httpclient5</artifactId>
-            <version>5.4-alpha1</version>
+            <version>${httpclient.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
-            <version>4.4.16</version>
+            <version>${httpcore.version}</version>
         </dependency>
 
         <!-- oauth connection library -->
         <dependency>
             <groupId>oauth.signpost</groupId>
             <artifactId>signpost-commonshttp4</artifactId>
-            <version>2.1.1</version>
+            <version>${oauthsgignpost.version}</version>
         </dependency>
 
         <!-- UTILITIES -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.10.2</version>
+            <version>${testng.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.26.3</version>
+            <version>${assertj.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.36</version>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -76,13 +98,13 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.16</version>
+            <version>${slf4j.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>2.0.16</version>
+            <version>${slf4j.version}</version>
         </dependency>
 
         <!-- ALLURE -->
@@ -104,13 +126,13 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.18.2</version>
+            <version>${jackson.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
-            <version>2.17.2</version>
+            <version>${jackson.version}</version>
         </dependency>
 
 
@@ -118,13 +140,13 @@
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
-            <version>9.1.0</version>
+            <version>${mysql-connector-j.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
-            <version>4.28.2</version>
+            <version>${protobuf-java.version}</version>
         </dependency>
 
     </dependencies>
