--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: wordpress
       WORDPRESS_DB_NAME: wordpress
+      WP_HOME: http://localhost:8889
+      WP_SITEURL: http://localhost:8889
     volumes:
       - wordpress_data:/var/www/html
     networks:
