--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
   db:
     image: testelkapl/test-bookstore-mysql:2.0
     restart: always
-#    ports:
-#      - "3306:3306"
+    ports:
+      - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
     cap_add:
